This is the CHANGELOG for amavisd-milter.

20090803:
	Bug fix - sendmail 8.14 introduces three new callbacks.

20090601:
	Compatibility fix - Debian installs libmilter.a to /usr/lib/libmilter.

	Thanks to: Simon Hobson <linux@thehobsons.co.uk>

20081205:
	amavisd-milter-1.4.0:

	New features:
	- Added new amavisd-milter option -q which sets milter socket backlog
	  used by listen(2).
	- Local state directory (default /var/amavis) is tunable via configure
	  option:
	  --localstatedir=</DIR>	      - absolute path to local state
	  					directory.
	- Working directory (default local state directory) is tunable via
	  configure option:
	  --with-working-directory=<SUBDIR>   - subdirectory of local
						state directory.
	  --with-working-directory=</DIR>     - absolute path to working
						directory.

	Bug and compatibility fixies:
	- amavisd-milter convert CRLF to LF in mail body to support amavisd-new
	  integrated DKIM signing and verification.
	- Fixed memory leak in fts_alloc() on Solaris.
	- Solaris doesn't have dirfd().
	- Solaris 9 and older doesn't have sem_timedwait.

20081109:
	Local state directory (default /var/amavis) is tunable via configure
	option: --localstatedir=<DIR>

	Working directory (default local state directory) is tunable via
	configure option:
	--with-working-directory=<SUBDIR> subdirectory of local state directory
	--with-working-directory=</DIR>   absolute path to working directory

20081108:
	Added new amavisd-milter option -q which sets milter socket backlog
	used by listen(2).

20081029:
	Compatibility fix - Solaris 9 and older doesn't have sem_timedwait.
	Use sem_trywait if sem_timedwait isn't available.

	Thans to: Henrik Krohns <hege@hege.li>

20081029:
	Memory leak in fts_alloc() on Solaris fixed.

	Luke Mewburn wrote:
	  In examining the code, it appears that the implementation of
	  fts_alloc() can leak the struct stat fts_statp if you're not using
	  ALIGNBYTES() && ALIGN(), which I guess that Solaris doesn't have.