@@ -1,5 +1,5 @@
 .\"
-.\" $Id: amavisd-milter.8,v 1.17 2007/09/23 17:29:07 reho Exp $
+.\" $Id: amavisd-milter.8,v 1.18 2008/11/08 20:11:38 reho Exp $
 .\"
 .Dd Januar 23, 2006
 .Dt amavisd-milter 8
@@ -15,6 +15,7 @@
 .Op Fl m Ar max-conns
 .Op Fl M Ar max-wait
 .Op Fl p Ar pidfile
+.Op Fl P
 .Op Fl q Ar backlog
 .Op Fl s Ar socket
 .Op Fl t Ar timeout
@@ -106,6 +107,10 @@ has default value 1 hour,
 We suggest to use less than 10 minutes. 
 .It Fl p Ar pidfile
 Use this pid file (default /var/amavis/amavisd-milter.pid).
+.It Fl P
+When
+.Sy amavisd-new
+fails mail will be passed through unchecked.
 .It Fl q Ar backlog
 Sets the incoming socket backlog used by
 .Xr listen 2 Ns
